# Brightspace-mcp

./: .env.example  .gitignore  Brightspace-MCP.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  auth_only_brightspace.py  bootstrap_brightspace_mcp.py  brightspace_mcp_launcher.py  brightspace_oauth_ngrok.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
brightspace_mcp/: __init__.py  brightspace.py  cli.py  config.py  main.py  selftest.py  smoke.py
tests/integration/: test_live_brightspace.py  test_live_extended.py
tests/unit/: test_brightspace_client.py  test_wrappers_errors.py  test_wrappers_new.py
